--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -6,6 +6,8 @@
   min-height: 100vh; /* Ensure the container takes up the full height of the viewport */
   max-width: 100vw; /* Prevent horizontal overflow */
   overflow-x: hidden; /* Hide horizontal overflow */
+  position: relative;
+  z-index: 1; /* Lower z-index to ensure authButton is on top */
 }
 
 .sidePanel {
@@ -153,6 +155,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start; /* Align items to the top */
+  position: relative;
+  z-index: 1; /* Lower z-index to ensure authButton is on top */
 }
 
 .adSide {
@@ -161,6 +165,7 @@
   position: fixed; /* Fix position so it doesn't cause overflow */
   right: 0; /* Align to the right */
   top: 0; /* Align to the top */
+  z-index: 1; /* Lower z-index to ensure authButton is on top */
 }
 
 @media (max-width: 1067px) {
